# assistant-obseques

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.fr.md  README.md  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  tsconfig.json
.agent/skills/secret-scan/: SKILL.md
agents/: __init__.py  auth.py  checker.py  extractor.py  liturgy.py  llm.py  models.py  orchestrator.py  telemetry.py  writer.py
eval/: __init__.py  jeanne_martin_form_test.py  judge.py  probe_gmail_mcp.py  probe_sheets_mcp.py  run_all.py  test_auth.py  test_cross_contamination.py  test_edit_survival.py  test_fallback_recipient.py  test_full_ontology.py  test_injection.py  test_mcp_manual.py  test_mcp_sheets.py  test_mobile_rendering.py  test_ontology_source.py  test_photo_order.py  test_ui_journey.py  verify_checker.py  verify_extractor.py  verify_photos.py  verify_pipeline.py  verify_writer.py
eval/results/: report.md
examples/henriette_moreau/: expected.json  notes.md
examples/jeanne_martin/: expected.json  notes.md
integrations/mcp/: config.json
security/: README.md
skills/deroule-obseques/: SKILL.md
skills/references/: exemple_deroule.json
skills/scripts/: build_deroule.js
specs/: architecture.md  behaviour.md  interface.md  schema.json
tools/: __init__.py  deroule.py  mcp_clients.py  mcp_flags.py
ui/: README.md  app.py  client.ts
ui/static/: bundle.js  style.css
ui/templates/: login.html  screen_a.html  screen_b.html  screen_c.html
utils/: env.py
(+1 files in other folders)
