[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistant-obseques"
version = "0.1.0"
description = "Assistant Obsèques"
requires-python = "==3.13.*"
dependencies = [
    "google-adk",
    "google-genai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "Pillow",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "itsdangerous",
    "mcp",
]

[project.optional-dependencies]
obs = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "langfuse"
]
dev = [
    "pytest",
    "playwright",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "utils"]
